--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -1,18 +1,130 @@
-body{
-    background-color: #f3eae3;
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@400;700&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,100;1,200;1,400;1,500&family=Ubuntu:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Inter:wght@400;500;600&family=Outfit:wght@400;700&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;1,100;1,200;1,400;1,500&family=Ubuntu:wght@300;400;500;700&display=swap");
+
+:root {
+    --dark-cyan: hsl(158, 36%, 37%);
+    --darker-cyan: hsl(158, 36%, 20%);
+    --cream: hsl(30, 38%, 92%);
+    --White: hsl(0, 0%, 100%);
+    --dark-grayish-blue: hsl(228, 12%, 48%);
+    --very-dark-blue: hsl(212, 21%, 14%);
 }
 
-.attribution { 
-    font-size: 11px; text-align: center; 
-}
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.main{
-    /* justify-content: center;
-    align-items: center; */
-    border: 10px black;
-    max-height: 400px;
-    width: 60%;
-}
+.attribution {
+    font-size: 8px;
+    text-align: center;
+  }
+  .attribution a {
+    color: hsl(284, 100%, 18%);
+  }
+
+  img,picture,video,canvas,svg{
+    display: block;
+    max-width: 100%;
+    /* height: 100%; */
+  }
+
+  p,h1,h2{
+    overflow-wrap: break-word;
+  }
+
+   p{
+    color: var(--dark-grayish-blue);
+    letter-spacing: 1px;
+    font-size: 15px;
+    font-weight: 400;
+  }
+
+  body {
+    display: grid;
+    margin: 1rem;
+    place-content: center;
+    background-color: var(--cream);
+    font-family: "Montserrat", sans-serif;
+    line-height: 1.3;
+  }
+
+  main {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--cream);
+  }
+
+  .product{
+    display: grid;
+    background-color: var(--White);
+    border-radius: 0.5rem;
+    overflow: hidden;
+    max-width: 600px;
+  }
+
+  @media (min-width: 600px){
+    body {
+        overflow: hidden;
+    }
+    .product{
+        grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  .product-info {
+    padding: 1.5rem;
+    display: grid;
+    gap: 1rem;
+  }
+
+  .product-name{
+    font-family: "Fraunces", serif;
+    font-size: 2rem;
+    line-height: 1.2;
+    font-weight: 700;
+  }
+
+  .category {
+    letter-spacing: 0.4rem;
+    color: var(--dark-grayish-blue);
+  }
+
+  .price{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  
+  .product_current_price{
+    font-size: 2rem;
+    font-family: "Fraunces", sans-serif;
+    color: var(--dark-cyan);
+  }
+
+  .product_original_price{
+    text-decoration:line-through;
+  }
+
+  .button{
+    display: inline-flex;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: 0;
+    padding: 0.8rem 1.5rem;
+    background-color: var(--dark-cyan);
+    color: var(--White);
+    font-size: 1rem;
+    font-weight: 700;
+    border-radius: 0.5rem;
+  }
+
+  .button:is(:hover, :focus){
+    background-color: var(--darker-cyan);
+  }
